# ProjectB

./: .gitignore  CMakeLists.txt  PCheckboard.cpp  PFigure.cpp  PFigure.h  PGame.cpp  PPoint.cpp  PPoint.h  PSaver.cpp  PSaver.h  PViewSide.cpp  README.md  main.cpp
include/: Checkboard.h  Figure.h  FigureFactory.h  Game.h  PCheckboard.h  PFigure.h  PFigureFactory.cpp  PFigureFactory.h  PGame.h  PPathSystem.h  PPoint.h  PSaver.h  PViewSide.h  PathSystem.h  Point.h  Saver.h  ViewSide.h
src/: CMakeLists.txt  Checkboard.cpp  Figure.cpp  FigureFactory.cpp  Game.cpp  PCheckboard.cpp  PFigure.cpp  PFigureFactory.cpp  PGame.cpp  PPathSystem.cpp  PPoint.cpp  PSaver.cpp  PViewSide.cpp  PathSystem.cpp  Point.cpp  Saver.cpp  ViewSide.cpp  main.cpp
tests/: CMakeLists.txt  PCheckboardTest.hpp  Tests.hpp  catchMain.cpp  test-King-Path.cpp  test-Knight-Path.cpp  test-Pawn-Path.cpp  test-Queen-Path.cpp  test.cpp  testCheckboard.cpp  testFigureFactory.cpp  testPCheckboard-King.cpp  testPCheckboard-Pawn.cpp  testPCheckboard-Queen.cpp  testPCheckboard-buildAllFigures.cpp  testPCheckboard-check.cpp  testPCheckboard.cpp  testPFigureFactory.cpp  testPPoint.cpp  testPoint.cpp
