set (TEST_CORE CatchCore)

function (make_test name)
    add_executable (${name} ${name}.cpp)
    target_link_libraries (${name} ${TEST_CORE})
    add_test (NAME ${name} COMMAND ${name})
endfunction ()

add_library(${TEST_CORE} SHARED catchMain.cpp)
target_link_libraries (${TEST_CORE} ${LIB_NAME})

make_test (testPPoint)
make_test (test-Pawn-Path)
make_test (test-King-Path)
make_test (test-Rook-Path)
make_test (test-Knight-Path)
make_test (test-Bishop-Path)
make_test (test-Queen-Path)
make_test (testPCheckboard)
make_test (testPFigureFactory)
